--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>day.one</module>
+        <module>day.two</module>
     </modules>
 
     <name>leetcode</name>
