Add day three: Maximum Subarray

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>day.one</module>
         <module>day.two</module>
+        <module>day.three</module>
     </modules>
 
     <name>leetcode</name>
