Add day four and day five

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <module>day.one</module>
         <module>day.two</module>
         <module>day.three</module>
+        <module>day.four</module>
+        <module>day.five</module>
     </modules>
 
     <name>leetcode</name>
